<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_app_name">麝香漫画官方平台</string>
    <string name="account_certificate">账号凭证</string>
    <string name="account_copy">复制</string>
    <string name="account_credentials">账号凭证</string>
    <string name="account_find_scucess">找回成功</string>
    <string name="account_found_notice">账号丢失不用愁，保存凭证解君忧～</string>
    <string name="account_found_tips">由于行业特殊性，当APP无法使用需要下载新的安装包，已经系统升级等原因，用户进入APP后生成了新的账号，导致原账号的丢失。\n当您遇到账号丢失问题时，可在我的—设置—找回账号—账号凭证找回，扫描或上传该凭证的二维码，即可找回升级更新前的原账号，原账号的VIP等级等全套资料也将得到恢复。</string>
    <string name="account_info_mine">我的账号信息</string>
    <string name="account_nick_name">用户昵称</string>
    <string name="account_notice">温馨提示</string>
    <string name="account_retrieve_account">账号凭证找回</string>
    <string name="account_retrieve_email">发送邮件找回</string>
    <string name="account_retrieve_group">进群联系客服找回</string>
    <string name="account_retrieve_phone">手机号找回</string>
    <string name="account_retrieve_service">联系客服找回</string>
    <string name="account_retrieve_tips">如果以上方式都未能找回账号，请您提供以下相关信息，通过客服 中心提交问题的方式找回：\n 1、新旧账号的邀请码；\n 2、购买VIP的付款截图；\n 3、推荐用户人数、上次登陆APP时间，等可以证明您身份的信息</string>
    <string name="account_use_method">使用方法</string>
    <string name="account_user_id">用户ID</string>
    <string name="account_work_fans" formatted="false">作品%s 粉丝%s</string>
    <string name="action_settings">Settings</string>
    <string name="add_holder">+%d</string>
    <string name="alipay_card">支付宝账号</string>
    <string name="alipay_name">支付宝名称</string>
    <string name="androidx_camera_default_config_provider" />
    <string name="app_center">应用中心</string>
    <string name="app_download">下载</string>
    <string name="app_download_count">%s次下载</string>
    <string name="app_name">抖漫</string>
    <string name="app_no_permission">没有权限</string>
    <string name="app_recommend">应用推荐</string>
    <string name="app_start_download">正在下载…</string>
    <string name="app_versiong_upgarde">版本更新</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_service_title">哈喽,我是智能小A</string>
    <string name="avatar_change_tips">每个自然月仅能修改一次\n请勿带入任何广告信息，会被封禁</string>
    <string name="avatar_setting">头像设置</string>
    <string name="bank_card">银行卡号</string>
    <string name="bank_name">银行名称</string>
    <string name="bank_sub_name">开户支行</string>
    <string name="banner_adapter_null_error">Adapter为空！请检查下参数</string>
    <string name="behavior_transfer_header">com.ajfb.app.shortvideo.ui.mine.TransferHeaderBehavior</string>
    <string name="bind_invite_code">邀请码</string>
    <string name="bind_invite_hint">请输入邀请码</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_phone_title">绑定手机号</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">还是有点底线吧</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_msg_complete">点击刷新消息记录\n</string>
    <string name="brvah_load_msg_end">没有更多消息记录！</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="buy_vip_center">会员中心</string>
    <string name="buy_vip_tips">还不是会员哦，立即开通吧</string>
    <string name="by_footer_load_failed">加载失败，请点我重试</string>
    <string name="by_footer_loading">努力加载中…</string>
    <string name="by_footer_no_more">没有更多数据了</string>
    <string name="by_header_hint_normal">下拉刷新</string>
    <string name="by_header_hint_release">松开刷新</string>
    <string name="by_refresh_done">刷新完成</string>
    <string name="by_refreshing">刷新中…</string>
    <string name="canvas_group">合集</string>
    <string name="canvas_image">图集</string>
    <string name="canvas_long_video">长视频</string>
    <string name="canvas_short_video">短视频</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_hint">请输入文字…</string>
    <string name="chat_send">发送</string>
    <string name="check_line_error">很遗憾～暂未找到合适路线</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_pay_type">请选择支付方式</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clip_success">复制成功</string>
    <string name="coin">金币</string>
    <string name="coin_balance">金币余额</string>
    <string name="coin_consumer_details">消费明细</string>
    <string name="coin_current_count">当前余额</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="content_empty">当前页面暂无内容~</string>
    <string name="content_with_index" formatted="false">%d、%s</string>
    <string name="copy_invite_code">复制链接</string>
    <string name="count_down">倒计时：%s</string>
    <string name="credentials_notice_tips">1．请您保存二维码凭证，以便找回您的账号\n2．请妥善保管此账号凭证，不要随意透露给任何人\n3．若此账号不慎丢失，可通过app账号安全扫取该二维码凭证账号登录</string>
    <string name="credentials_tips">请到设置—找回账号—账号凭证找回或者扫描凭证</string>
    <string name="data_empty">当前页面暂无内容</string>
    <string name="day">日期</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_ensure">确定</string>
    <string name="dialog_btn_ignore">忽略</string>
    <string name="dialog_btn_redownload">重新下载</string>
    <string name="dialog_btn_update">更新</string>
    <string name="dialog_title_exit">温馨提示</string>
    <string name="dialog_title_isredownload">是否重新下载？</string>
    <string name="dialog_title_pic_download">正在下载</string>
    <string name="dialog_title_update">有新版本啦</string>
    <string name="dialog_title_update_failure">更新失败</string>
    <string name="dialog_title_updating">正在更新</string>
    <string name="digits_numword">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="empty_network_error">加载失败,请稍后重试</string>
    <string name="empty_no_data">当前页面暂无内容~</string>
    <string name="error_generate">网络不稳定,请稍后重试</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_lines">没有可用线路</string>
    <string name="error_net_data">系统数据校验失败</string>
    <string name="error_no_type">没有填写泛型参数</string>
    <string name="error_permission_phone">权限被拒绝</string>
    <string name="error_sign">签名错误</string>
    <string name="error_status">状态错误</string>
    <string name="error_type">类型错误</string>
    <string name="exchange_code">兑换码</string>
    <string name="exchange_code_hint">请输入兑换码</string>
    <string name="exchange_code_input">输入兑换码</string>
    <string name="exchange_now">立即兑换</string>
    <string name="exchange_vip">兑换中心</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fans">粉丝</string>
    <string name="first_charge_discount">首充优惠</string>
    <string name="focus">关注</string>
    <string name="focused">已关注</string>
    <string name="share_bind_tips">注：只能绑定一次，且绑定后不能进行修改，请核对输入是否正确</string>
    <string name="user_nick_name">昵称</string>
</resources>