<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:tag="layout/act_share_bind_0"
    android:background="@color/white"
    android:padding="@dimen/app_content_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/bind_invite_code"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_666666"
        android:gravity="center_vertical"
        android:id="@+id/et_bind"
        android:tag="binding_1"
        android:background="@drawable/bg_input_login"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/bind_invite_hint"
        android:maxLines="1"
        android:maxLength="10"
        android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/app_content_margin"
        android:paddingEnd="@dimen/app_content_margin"/>
    <ImageView
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_content_margin"
        android:src="@drawable/icon_avatar_tips"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/white_translucent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/share_bind_tips"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:id="@+id/submit"
        android:tag="binding_2"
        android:background="@drawable/btn_orange_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/dialog_btn_ensure"/>
</LinearLayout>
