<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_40">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/load_more_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="@dimen/dp_4"
            android:progressTint="@color/color_9b9b9b"
            android:indeterminateTint="@color/color_9b9b9b"/>
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_9b9b9b"
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:text="@string/brvah_loading"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/load_more_load_fail_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/color_9b9b9b"
            android:layout_gravity="center"
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brvah_load_failed"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/load_more_load_complete_view"
        android:background="@drawable/bg_footer"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/color_9b9b9b"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brvah_load_complete"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/load_more_load_end_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/color_9b9b9b"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brvah_load_end"/>
    </FrameLayout>
</FrameLayout>
