<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/ll_more_loading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/by_load_more_simple_height">
        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_width="@dimen/by_progress_width_height"
            android:layout_height="@dimen/by_progress_width_height"/>
        <TextView
            android:textColor="@color/by_footer_text_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/by_load_more_simple_margin"
            android:text="@string/by_footer_loading"
            android:layout_marginStart="@dimen/by_load_more_simple_margin"/>
    </LinearLayout>
    <TextView
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:id="@+id/tv_no_more"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/by_load_more_simple_height"
        android:text="@string/by_footer_no_more"/>
    <TextView
        android:gravity="center"
        android:id="@+id/tv_more_failed"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/by_load_more_simple_height"
        android:text="@string/by_footer_load_failed"/>
    <View
        android:id="@+id/view_bottom"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/by_refresh_simple_height"/>
</LinearLayout>
