<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/input_background_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black39"
        android:gravity="center"
        android:id="@+id/tv_shareitem_code"
        android:background="@color/input_background_color"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind_invite_code"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black39"
        android:gravity="center"
        android:id="@+id/tv_shareitem_name"
        android:background="@color/input_background_color"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_nick_name"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="@+id/guideLeft"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black39"
        android:gravity="center"
        android:id="@+id/tv_shareitem_time"
        android:background="@color/input_background_color"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideRight"
        app:layout_constraintTop_toTopOf="parent"/>
</LinearLayout>
