<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:tag="layout/act_exchange_0"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="17sp"
        android:textColor="#242424"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/exchange_code_input"
        android:layout_marginStart="@dimen/app_content_margin"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black30"
        android:id="@+id/et_content"
        android:tag="binding_1"
        android:background="@drawable/bg_input_login"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="12dp"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_content_margin"
        android:layout_marginTop="15dp"
        android:layout_marginRight="@dimen/app_content_margin"
        android:hint="@string/exchange_code_hint"
        android:maxLines="1"
        android:maxLength="10"
        android:inputType="text"
        android:textCursorDrawable="@drawable/color_cursor"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/tv_submit"
        android:tag="binding_2"
        android:background="@drawable/btn_orange_style"
        android:paddingLeft="14dp"
        android:paddingTop="12dp"
        android:paddingRight="14dp"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/exchange_now"
        android:textCursorDrawable="@drawable/color_cursor"/>
    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/car_color"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/white_translucent"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exchange_code"
            android:layout_weight="1"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/white_translucent"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="兑换类型"
            android:layout_weight="1"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/white_translucent"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="兑换时间"
            android:layout_weight="1"/>
    </LinearLayout>
    <com.drake.brv.PageRefreshLayout
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_exchange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.drake.brv.PageRefreshLayout>
</LinearLayout>
