<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:tag="layout/act_find_0"
    android:background="@color/input_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_content_margin"
        app:divider="@color/divider"
        app:dividerPadding="1dp"
        app:showDividers="middle">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center_vertical"
            android:id="@+id/layout_retrieve_account"
            android:tag="binding_1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="17dp">
            <TextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/account_retrieve_account"
                android:layout_weight="1"/>
            <ImageView
                android:padding="4dp"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/icon_mine_more"
                android:layout_marginEnd="6dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center_vertical"
            android:id="@+id/layout_find_service"
            android:tag="binding_2"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="17dp">
            <TextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/account_retrieve_service"
                android:layout_weight="1"/>
            <ImageView
                android:padding="4dp"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/icon_mine_more"
                android:layout_marginEnd="6dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center_vertical"
            android:id="@+id/layout_find_email"
            android:tag="binding_3"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15sp"
                android:textColor="#242424"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/account_retrieve_email"
                android:layout_weight="1"/>
            <TextView
                android:textColor="#0089ff"
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:padding="4dp"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/icon_mine_more"
                android:layout_marginEnd="6dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ImageView
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon_avatar_tips"
        android:layout_marginStart="@dimen/app_content_margin"/>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/color_ff6a00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_retrieve_tips"
        android:layout_marginStart="@dimen/app_content_margin"
        android:layout_marginEnd="@dimen/app_content_margin"/>
</androidx.appcompat.widget.LinearLayoutCompat>
